--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ 
+}
+body{
+  background-color: #F6F6F6;
 }
 
 swiper {
